--- a/VignobleWEB/Pages/Shared/_Layout.cshtml
+++ b/VignobleWEB/Pages/Shared/_Layout.cshtml
@@ -1,3 +1,7 @@
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
+
 <!DOCTYPE html>
 <html lang="fr" xmlns="http://www.w3.org/1999/html">
 <head>
@@ -6,6 +10,7 @@
     <title>@ViewData["Title"] - VignobleWEB</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/Register.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/basket.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/VignobleWEB.styles.css" asp-append-version="true" />
 </head>
@@ -21,26 +26,46 @@
               <div class="navbar-collapse collapse d-sm-inline-flex">
                   <ul class="navbar-nav flex-grow-1">
                       <li class="nav-item">
-                          <a class="nav-link text-dark" asp-area="" asp-page="Articles/Articles">Article</a>
+                          <a class="nav-link text-dark" asp-area="" asp-page="/Articles/Articles">Article</a>
                       </li>
                   </ul>
               </div>
               <div>
-                  <a asp-area="" asp-page="Basket/Basket"><img class="litlesize" src="img/basket.png" alt="panier"/></a>
+                  <a asp-area="" asp-page="/Basket/Basket"><img class="litlesize" src="/img/basket.png" alt="panier"/></a>
               </div>
+              @if (SignInManager.IsSignedIn(User))
+              {
+                <div>
                    <!-- Dropdown Menu Here -->
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <img class="litlesize Image" src="img/user.png" alt="Image"/>
+                            <img class="litlesize Image" src="/img/user.png" alt="Image"/>
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="#">Se Connecter</a>
-                            <a class="dropdown-item" href="#">Créer un compte</a>
+                            <a class="dropdown-item" asp-area="" asp-page="/Account/Manage/Index">Mon compte</a>
+                            <a class="dropdown-item" asp-area="" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })" asp-page="/Account/Logout">Se déconnecter</a>
                         </div>
                     </li>
                     <!-- Other Menu Items Here -->
-                    <partial name="_LoginPartial" />
-              </div>
+                    </div>
+                }
+                else
+                {    
+                    <div>
+                       <!-- Dropdown Menu Here -->
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <img class="litlesize Image" src="/img/user.png" alt="Image"/>
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                <a class="dropdown-item" asp-area="" asp-page="/Account/Login">Se Connecter</a>
+                                <a class="dropdown-item" asp-area="" asp-page="/Account/Register">Créer un compte</a>
+                            </div>
+                        </li>
+                        <!-- Other Menu Items Here -->
+                    </div>
+                }
+          </div>
       </nav>
   </header>
 
