--- a/VignobleWEB/Pages/Shared/_Layout.cshtml
+++ b/VignobleWEB/Pages/Shared/_Layout.cshtml
@@ -33,19 +33,19 @@
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" asp-area="" asp-page="/Articles/Articles">Tous les produits</a></li>
                             <li><hr class="dropdown-divider" /></li>
-                            <li><a class="dropdown-item" href="#!">Popular Items</a></li>
-                            <li><a class="dropdown-item" href="#!">New Arrivals</a></li>
+                            <li><a class="dropdown-item" asp-area="" asp-page="">Produits populaires</a></li>
+                            <li><a class="dropdown-item" asp-area="" asp-page="">Nouveautés</a></li>
                         </ul>
                     </li>
                 </ul>
             </div>
 
             <div>
-                <button class="btn btn-outline-dark" type="submit">
+                <a class="btn btn-outline-dark" asp-area="" asp-page="/Basket/Basket">
                     <i class="bi-cart-fill me-1"></i>
-                    Cart
+                    Panier
                     <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
-                </button>
+                </a>
             </div>
             @if (SignInManager.IsSignedIn(User))
             {
