--- a/VignobleWEB/Pages/Index.cshtml
+++ b/VignobleWEB/Pages/Index.cshtml
@@ -10,16 +10,24 @@
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="img/img1.jpg" class="d-block w-100" alt="...">
+                <img src="img/Caroussel-1.png" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="img/img4.jpg" class="d-block w-100" alt="...">
+                 <img src="img/Caroussel-2.png" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="img/img5.jpg" class="d-block w-100" alt="...">
+                 <img src="img/Caroussel-3.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                 <img src="img/Caroussel-4.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                 <img src="img/Caroussel-5.png" class="d-block w-100" alt="...">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
